# osint-cd

./: .env  .gitignore  README.md  dashboard-generator.js  package-lock.json  package.json  pyproject.toml  requirements-social-analyzer.txt  requirements.txt  scraper-200-portales.js  whatsapp-web-cd.js
config/: skills_manifest.example.json
docs/: llm-workflow.md
docs/integrations/: social-analyzer.md
osint_cd/: __init__.py  browser.py  cli.py  exporters.py  models.py  text.py
osint_cd/collectors/: __init__.py  base.py  public_web.py  query_template.py  registry.py
osint_cd/integrations/: __init__.py  social_analyzer.py
osint_cd/llm/: __init__.py  orchestrator.py  repository_discovery.py  schemas.py  skills.py
scripts/: smoke_imports.py  vendor_social_analyzer.ps1  vendor_social_analyzer.sh
