[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osint-cd"
version = "0.1.0"
description = "Motor OSINT/SOCMINT público con Brave/Selenium, evidencia trazable y export JSON/CSV para Consultora Diagonales."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Consultora Diagonales" }]
license = { text = "MIT" }
dependencies = [
  "selenium>=4.21.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "pandas>=2.0.0",
  "python-dateutil>=2.9.0"
]

[project.optional-dependencies]
social = ["social-analyzer>=2.0.0"]

[project.scripts]
osint-cd = "osint_cd.cli:main"

[tool.setuptools.packages.find]
include = ["osint_cd*"]

[tool.ruff]
line-length = 100
